--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,11 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirate Name: <%= @pirate.name %></h1>
+<h1>Pirate Weight: <%= @pirate.weight %></h1>
+<h1>Pirate Height: <%= @pirate.height %></h1>
 
+<h2>Ship Name: <%= @ships[0].name %></h2>
+<h2>Ship Type: <%= @ships[0].type %></h2>
+<h2>Ship Booty: <%= @ships[0].booty %></h2>
 
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<h2>Ship Name: <%= @ships[1].name %></h2>
+<h2>Ship Type: <%= @ships[1].type %></h2>
+<h2>Ship Booty: <%= @ships[1].booty %></h2>
